Connecting to OpenAI SDK

--- a/Week 1/env-test.ipynb
+++ b/Week 1/env-test.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "c6120fa2-e91e-4afa-9a04-ad6cbb0b3e63",
    "metadata": {},
    "outputs": [
@@ -30,31 +30,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "**The Magical Journey of Luna the Unicorn**\n",
+      "**Luna and the Starry Night**\n",
       "\n",
-      "Once upon a time, in a shimmering forest where the trees whispered secrets and the flowers sang soft melodies, lived a gentle unicorn named Luna. Her mane sparkled with colors of the sunset, and her horn glowed like the moonlight, illuminating the paths she trod.\n",
+      "Once upon a time, in a magical forest filled with whispering trees and sparkling flowers, there lived a gentle unicorn named Luna. She had a shimmering white coat that glowed under the moonlight and a mane that sparkled like stars.\n",
       "\n",
-      "One evening, as the sun dipped below the horizon, Luna spotted a peculiar glimmer near the Crystal Lake. Curious, she trotted over and discovered a tiny, lost star named Twinkle. Twinkle had fallen from the sky and longed to find her way back home.\n",
+      "Every night, Luna would gaze up at the night sky, dreaming of the twinkling stars that danced above her. One evening, as Luna wandered to her favorite meadow, she noticed a little star that seemed to be crying. Curious and concerned, she approached the glowing star.\n",
       "\n",
-      "“Don’t worry, Twinkle,” said Luna softly. “I will help you return to the sky.”\n",
+      "“Why are you sad, little star?” Luna asked softly.\n",
       "\n",
-      "With a flick of her shimmering mane, Luna called upon her magical powers. She danced in the moonlight, creating a trail of glowing sparkles that led to the tallest mountain in the forest. Together, they climbed higher and higher, through cotton candy clouds and gentle breezes.\n",
+      "The star twinkled and replied, “I’ve lost my way home. Without the other stars to guide me, I feel lonely and out of place.”\n",
       "\n",
-      "As they reached the peak, Luna looked up at the vast night sky. “There, among the stars, is your home,” she said, pointing with her horn.\n",
+      "Luna’s heart filled with compassion. “Don’t worry! I’ll help you find your way back,” she promised.\n",
       "\n",
-      "With her heart filled with hope, Twinkle floated up into the air, but the winds were strong, and she began to waver. Luna didn’t hesitate. She leapt forward, creating a radiant arch of silver light with her horn.\n",
+      "With a flick of her magical horn, Luna created a sparkling trail of stardust. The star brightened a little, feeling hopeful. Together, they followed the shimmering path through the forest, past the singing streams and the dreaming flowers.\n",
       "\n",
-      "“Fly, Twinkle! You can do it!” she encouraged.\n",
+      "“All we need is a little more light,” Luna said, and with that, she sang a sweet melody. Her beautiful voice echoed in the night, attracting the other stars. One by one, they twinkled down to join her and the little star.\n",
       "\n",
-      "With a boost from Luna’s magic, Twinkle soared higher, twinkling brightly as she climbed back to her celestial home. The stars welcomed her with twinkling applause, their lights sparkling in gratitude.\n",
+      "With the starry friends surrounding her, the little star glowed brighter than ever. “Thank you, Luna! Now I can find my way home!” she chirped with joy.\n",
       "\n",
-      "As Twinkle waved goodbye, Luna felt warmth in her heart. “Goodbye, dear friend! May your light shine forever!”\n",
+      "Luna smiled and watched as the little star floated back up into the sky, reuniting with its starry family. The night sky sparkled even more, twinkling with gratitude.\n",
       "\n",
-      "With the task complete, Luna returned to her forest, where the animals awaited her with joyful cheers. They gathered around her, celebrating her bravery and kindness. As the moon shone brightly above, Luna lay down, feeling happy and tired.\n",
+      "As Luna lay back in the meadow, she felt content. She had made a friend and helped someone in need. With her heart full of joy, she closed her eyes and drifted off to sleep, dreaming of adventures among the stars.\n",
       "\n",
-      "That night, as she dreamed of starlit skies and swirling adventures, Luna knew that true magic comes from helping others. And from that day on, she wasn't just a unicorn; she was a guardian of dreams, forever watching over the forest and the stars above.\n",
+      "And from that night on, whenever Luna looked up at the sky, she saw the little star shining brightly, a reminder of the kindness and magic that filled the world.\n",
       "\n",
-      "And with that, dear little one, it’s time for you to close your eyes and dream of magical adventures, just like Luna. Goodnight! 🌙✨\n"
+      "**The End**\n"
      ]
     }
    ],
@@ -78,7 +78,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
