Project 3 - Documentation Assistant

--- a/Week 1/docs.ipynb
+++ b/Week 1/docs.ipynb
@@ -210,16 +210,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[2K\u001b[37m⠼\u001b[0m \u001b[2marrow==1.3.0                                                                  \u001b[0m\u001b[2mResolved \u001b[1m153 packages\u001b[0m \u001b[2min 4.36s\u001b[0m\u001b[0m\n",
-      "\u001b[2K\u001b[37m⠙\u001b[0m \u001b[2mPreparing packages...\u001b[0m (0/1)                                                   \u001b[37m⠋\u001b[0m \u001b[2mPreparing packages...\u001b[0m (0/0)                                                   \n",
-      "\u001b[2K\u001b[1A\u001b[37m⠙\u001b[0m \u001b[2mPreparing packages...\u001b[0m (0/1)--------------\u001b[0m\u001b[0m     0 B/9.60 KiB            \u001b[1A\n",
-      "\u001b[2K\u001b[1A\u001b[37m⠙\u001b[0m \u001b[2mPreparing packages...\u001b[0m (0/1)----------\u001b[2m\u001b[0m\u001b[0m 9.60 KiB/9.60 KiB           \u001b[1A\n",
-      "\u001b[2K\u001b[2mPrepared \u001b[1m1 package\u001b[0m \u001b[2min 73ms\u001b[0m\u001b[0m                                                   \u001b[1A\n",
-      "\u001b[2K░░░░░░░░░░░░░░░░░░░░ [0/1] \u001b[2mInstalling wheels...                                 \u001b[0m\u001b[1m\u001b[33mwarning\u001b[39m\u001b[0m\u001b[1m:\u001b[0m \u001b[1mFailed to hardlink files; falling back to full copy. This may lead to degraded performance.\n",
-      "         If the cache and target directories are on different filesystems, hardlinking may not be supported.\n",
-      "         If this is intentional, set `export UV_LINK_MODE=copy` or use `--link-mode=copy` to suppress this warning.\u001b[0m\n",
-      "\u001b[2K\u001b[2mInstalled \u001b[1m1 package\u001b[0m \u001b[2min 11ms\u001b[0m\u001b[0m1.1.0                            \u001b[0m\n",
-      " \u001b[32m+\u001b[39m \u001b[1mpython-frontmatter\u001b[0m\u001b[2m==1.1.0\u001b[0m\n"
+      "\u001b[2mResolved \u001b[1m153 packages\u001b[0m \u001b[2min 136ms\u001b[0m\u001b[0m\n",
+      "\u001b[2mAudited \u001b[1m148 packages\u001b[0m \u001b[2min 4.24s\u001b[0m\u001b[0m\n"
      ]
     }
    ],
@@ -288,19 +280,7 @@
    "execution_count": 6,
    "id": "a30e142e-39a3-4b1b-84da-de5337d52a0b",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'frontmatter'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[6]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mfrontmatter\u001b[39;00m\n\u001b[32m      3\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mparse_data\u001b[39m(data_raw):\n\u001b[32m      4\u001b[39m     data_parsed = []\n",
-      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'frontmatter'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import frontmatter\n",
     "\n",
@@ -317,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "d13f7fe4-c596-45b3-99d4-fff4e1eceed1",
    "metadata": {},
    "outputs": [],
@@ -327,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "id": "0181d85d-e8bf-49c0-ba17-7b47057ea60e",
    "metadata": {},
    "outputs": [
@@ -337,7 +317,7 @@
        "'You can view or export Reports in multiple formats.\\n\\n**Pre-requisites**:\\n\\n* You know how to [generate Reports](/docs/library/report).\\n\\n## Log to Workspace\\n\\nYou can save the computed Report in Evidently Cloud or your local workspace.\\n\\n```python\\nws.add_run(project.id, my_eval, include_data=False)\\n```\\n\\n<Info>\\n  **Uploading evals**. Check Quickstart examples [for ML](/quickstart_ml) or [for LLM](/quickstart_llm) for a full workflow.\\n</Info>\\n\\n## View in Jupyter notebook\\n\\nYou can directly render the visual summary of evaluation results in interactive Python environments like Jupyter notebook or Colab.\\n\\nAfter running the Report, simply call the resulting Python object:\\n\\n```python\\nmy_report\\n```\\n\\nThis will render the HTML object directly in the notebook cell.\\n\\n## HTML\\n\\nYou can also save this interactive visual Report as an HTML file to open in a browser:\\n\\n```python\\nmy_report.save_html(“file.html”)\\n```\\n\\nThis option is useful for sharing Reports with others or if you\\'re working in a Python environment that doesn’t display interactive visuals.\\n\\n## JSON\\n\\nYou can get the results of the calculation as a JSON. It is useful for storing and exporting results elsewhere.\\n\\nTo view the JSON in Python:\\n\\n```python\\nmy_report.json()\\n```\\n\\nTo save the JSON as a separate file:\\n\\n```python\\nmy_report.save_json(\"file.json\")\\n```\\n\\n## Python dictionary\\n\\nYou can get the output as a Python dictionary. This format is convenient for automated evaluations in data or ML pipelines, allowing you to transform the output or extract specific values.\\n\\nTo get the dictionary:\\n\\n```python\\nmy_report.dict()\\n```'"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -348,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "id": "d81ed32b-4ab1-4508-a778-3577156efec0",
    "metadata": {},
    "outputs": [],
@@ -442,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "id": "20eafaad-e57e-4901-a8b4-909d5707c78b",
    "metadata": {},
    "outputs": [],
@@ -452,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "id": "e66732cd-41ce-439c-9216-e22f175ab1a2",
    "metadata": {},
    "outputs": [
@@ -466,7 +446,7 @@
        " 'filename': 'docs/library/evaluations_overview.mdx'}"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -477,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "id": "70048471-e8e2-40df-b748-416f81b52e4c",
    "metadata": {},
    "outputs": [],
@@ -487,17 +467,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
    "id": "29440a9c-3d88-4048-8dc4-4f833472e0ee",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<minsearch.minsearch.Index at 0x7fc5a3c82090>"
+       "<minsearch.minsearch.Index at 0x736f8ccbec90>"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -512,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 14,
    "id": "5f436111-9193-4b22-a23b-fbc96335ef13",
    "metadata": {},
    "outputs": [],
@@ -522,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 15,
    "id": "b148021e-8858-4ab1-81c9-2ae723981cdf",
    "metadata": {},
    "outputs": [],
@@ -536,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 16,
    "id": "6a409f97-7b3b-4628-a5eb-9b48549afaa2",
    "metadata": {},
    "outputs": [],
@@ -546,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 17,
    "id": "200844a5-6435-4778-811c-946c32a9b307",
    "metadata": {},
    "outputs": [],
@@ -578,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 18,
    "id": "a4285258-d56a-4023-bd7a-811bf6801686",
    "metadata": {},
    "outputs": [],
@@ -598,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 19,
    "id": "9b301942-5338-4c8e-9999-7d65d4075771",
    "metadata": {},
    "outputs": [],
@@ -631,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 20,
    "id": "1f22a08c-d5d1-4865-868b-207752d6c28a",
    "metadata": {},
    "outputs": [],
@@ -645,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 21,
    "id": "7726bab7-8d8b-4088-b13f-d2f5ec8e7375",
    "metadata": {},
    "outputs": [],
@@ -655,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 22,
    "id": "6c16691e-058f-4e3f-a889-dec2d312c7ab",
    "metadata": {},
    "outputs": [
@@ -663,48 +643,54 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "To build an evaluation report with a large language model (LLM) as a judge, you can follow these structured steps:\n",
+      "To build an evaluation report using a language model (LLM) as a judge, you can follow these steps, primarily using the Evidently library. Here's a structured approach:\n",
       "\n",
-      "### 1. **Install Required Libraries**\n",
-      "Make sure to install the necessary libraries, such as `evidently`. You can do this via pip:\n",
+      "### 1. Installation and Imports\n",
+      "\n",
+      "First, ensure you have the Evidently library installed:\n",
+      "\n",
       "```bash\n",
       "pip install evidently\n",
       "```\n",
       "\n",
-      "### 2. **Import Required Modules**\n",
-      "Import the necessary modules from the Evidently library:\n",
+      "Next, import the necessary modules:\n",
+      "\n",
       "```python\n",
       "import pandas as pd\n",
-      "import os\n",
+      "import numpy as np\n",
       "from evidently import Dataset, DataDefinition, Report\n",
       "from evidently.presets import TextEvals\n",
       "from evidently.llm.templates import BinaryClassificationPromptTemplate\n",
+      "from evidently.metrics import *\n",
+      "import os\n",
       "```\n",
       "\n",
-      "### 3. **Set Up Your OpenAI API Key**\n",
-      "Ensure your OpenAI API key is set as an environment variable:\n",
+      "### 2. Configure LLM API Key\n",
+      "\n",
+      "Set your OpenAI API key as an environment variable:\n",
+      "\n",
       "```python\n",
       "os.environ[\"OPENAI_API_KEY\"] = \"YOUR_KEY\"\n",
       "```\n",
       "\n",
-      "### 4. **Create Your Evaluation Dataset**\n",
-      "Prepare a dataset with the following structure:\n",
-      "- **Questions**: Inputs sent to the LLM.\n",
-      "- **Target Responses**: Approved correct responses.\n",
-      "- **New Responses**: Responses generated by the system.\n",
-      "- **Manual Labels**: Indicate if responses are correct or incorrect.\n",
+      "### 3. Create Your Dataset\n",
       "\n",
-      "Here's an example of creating a toy dataset:\n",
+      "Prepare a dataset that will include:\n",
+      "\n",
+      "- **Questions**: Inputs sent to the LLM.\n",
+      "- **Target Responses**: Approved responses for evaluation.\n",
+      "- **New Responses**: Generated responses that need evaluation.\n",
+      "- **Manual Labels**: Labels indicating whether responses are correct.\n",
+      "\n",
+      "Here's an example to create such a dataset:\n",
+      "\n",
       "```python\n",
       "data = [\n",
-      "    [\"Question 1\", \"Correct Answer 1\", \"Generated Answer 1\", \"incorrect\"],\n",
-      "    [\"Question 2\", \"Correct Answer 2\", \"Generated Answer 2\", \"correct\"],\n",
-      "    # Add more rows as needed\n",
+      "    [\"How do I reset my password?\", \"Click 'Forgot Password'...\", \"To reset your password, click 'Forgot Password'...\", \"incorrect\", \"adds new information\"],\n",
+      "    [\"Where can I find my transaction history?\", \"Log into your account and go to 'Transaction History'...\", \"You can view your transaction history...\", \"correct\", \"\"]\n",
       "]\n",
       "\n",
-      "columns = [\"question\", \"target_response\", \"new_response\", \"label\"]\n",
-      "golden_dataset = pd.DataFrame(data, columns=columns)\n",
-      "\n",
+      "golden_dataset = pd.DataFrame(data, columns=[\"question\", \"target_response\", \"new_response\", \"label\", \"explanation\"])\n",
       "definition = DataDefinition(\n",
       "    text_columns=[\"question\", \"target_response\", \"new_response\"],\n",
       "    categorical_columns=[\"label\"]\n",
@@ -713,52 +699,55 @@
       "eval_dataset = Dataset.from_pandas(golden_dataset, data_definition=definition)\n",
       "```\n",
       "\n",
-      "### 5. **Set Up the LLM Judge (Evaluator)**\n",
-      "Define the evaluation criteria:\n",
+      "### 4. Configure the LLM Judge\n",
+      "\n",
+      "Set up the LLM to evaluate the correctness of the new responses based on the defined criteria:\n",
+      "\n",
       "```python\n",
-      "correctness_prompt = BinaryClassificationPromptTemplate(\n",
-      "    criteria=\"An ANSWER is correct when it is the same as the REFERENCE in all facts.\",\n",
+      "correctness_template = BinaryClassificationPromptTemplate(\n",
+      "    criteria=\"\"\"\n",
+      "    An ANSWER is correct when it matches the REFERENCE in all facts and details, even if worded differently.\n",
+      "    The ANSWER is incorrect if it contradicts the REFERENCE, adds additional claims, or omits important details.\n",
+      "    REFERENCE: {target_response}\n",
+      "    \"\"\",\n",
       "    target_category=\"correct\",\n",
       "    non_target_category=\"incorrect\",\n",
-      "    include_reasoning=True\n",
+      "    uncertainty=\"unknown\",\n",
+      "    include_reasoning=True,\n",
+      "    pre_messages=[(\"system\", \"You are an expert evaluator.\")]\n",
       ")\n",
       "\n",
       "eval_dataset.add_descriptors(descriptors=[\n",
-      "    LLMEval(\n",
-      "        \"new_response\",\n",
-      "        template=correctness_prompt,\n",
-      "        provider=\"openai\",\n",
-      "        model=\"gpt-4o-mini\",\n",
-      "        alias=\"Correctness\",\n",
-      "        additional_columns={\"target_response\": \"target_response\"}\n",
-      "    )\n",
+      "    LLMEval(\"new_response\", template=correctness_template, provider=\"openai\", model=\"gpt-4o-mini\", alias=\"Correctness\")\n",
       "])\n",
       "```\n",
       "\n",
-      "### 6. **Run the Evaluation Report**\n",
-      "Generate the evaluation report:\n",
+      "### 5. Generate the Evaluation Report\n",
+      "\n",
+      "After scoring the dataset using the LLM, you can generate a report to visualize results:\n",
+      "\n",
       "```python\n",
       "report = Report([TextEvals()])\n",
       "my_eval = report.run(eval_dataset, None)\n",
       "```\n",
       "\n",
-      "### 7. **View Results**\n",
-      "You can preview the scored dataset and evaluation report:\n",
+      "### 6. View the Results\n",
+      "\n",
+      "You can view the DataFrame with added scores and evaluations:\n",
+      "\n",
       "```python\n",
-      "print(eval_dataset.as_dataframe())\n",
-      "print(my_eval)\n",
+      "eval_dataset.as_dataframe()\n",
       "```\n",
       "\n",
-      "### 8. **Iterate and Improve**\n",
-      "If the results are not satisfactory, refine your LLM prompt or try different models. You can compare feedback from the LLM with the manual labels to make adjustments.\n",
+      "### 7. Iteration and Improvement\n",
       "\n",
-      "### 9. **Export Results (Optional)**\n",
-      "You can export results in various formats such as HTML, JSON, etc. Check the Evidently documentation for output formats.\n",
+      "- Review the LLM's evaluations.\n",
+      "- Edit the prompt or labels based on findings to improve the accuracy.\n",
+      "- You can also try different LLMs to see which performs better.\n",
       "\n",
-      "### 10. **Next Steps**\n",
-      "Explore integration with the Evidently Cloud for easier evaluation tracking and visualization.\n",
+      "### Conclusion\n",
       "\n",
-      "By following these structured steps, you can effectively create an evaluation report with an LLM as a judge, analyzing responses based on custom criteria.\n"
+      "This structured approach enables you to use an LLM as a judge for evaluating responses against established criteria. The Evidently library simplifies the process, allowing you to generate comprehensive evaluation reports.\n"
      ]
     }
    ],
@@ -785,7 +774,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
